Ui changes primarily. Added the side navigation bar and tried a few different aproaches. Still need to fix the overlapping with the footer.

--- a/ProjectManager/ProjectManager/wwwroot/css/site.css
+++ b/ProjectManager/ProjectManager/wwwroot/css/site.css
@@ -1,11 +1,36 @@
-html {
-  font-size: 14px;
+:root {
+    --darker_bg: #202525;
+    --lighter_bg: #424549;
+    --colourpalette-pink: #EA6077;
+    --colourpalette-white: #FFF0FF;
+    --colourpalette-darkgreen: #5F9C45;
+    --colourpalette-Lightgreen: #D8E299;
+    --colourpalette-reviewBlue: #6379EB;
+    --colourpalette-nav_bg: #1E1E1E;
+
+    --navbar-height: 80px;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+*{
+    margin:0;
+    padding:0
+}
+
+
+html {
+    font-family:Poppins,'Segoe UI';
+    font-size: 14px;
+    line-height:1.5rem;
+    
+}
+
+
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
@@ -13,10 +38,226 @@ html {
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
+    
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background-color: var(--darker_bg);
+    color: var(--colourpalette-white);
+}
+
+
+header{
+    position:sticky;
+    top:0;
+}
+
+
+.side_nav {
+    box-sizing: border-box;
+    height: 90vh;
+    width: auto;
+    max-width: 250px;
+    background-color: var(--colourpalette-nav_bg);
+    border-right: var(--colourpalette-pink);
+    position: fixed;
+    margin-top: -15px;
+    align-self: start;
+    transition: 300ms ease-in-out;
+    overflow: hidden;
+}
+
+.side_nav ul{
+    list-style: none;
+    padding-left: 0;
+}
+
+.side_nav > ul > li {
+    margin-bottom: 16px;
+    height: 80px;
+}
+
+.side_nav ul li.active a{
+    color: var(--colourpalette-pink)
+}
+
+.side_nav a{
+    padding: .85em;
+    text-decoration:none;
+    color:var(--colourpalette-white);
+    display:flex;
+    align-items:center;
+    gap: 1em;
+    height:100%;
+}
+.side_nav img{
+    flex-shrink:0 ;
+    fill:var(--colourpalette-pink);
+    margin-left: 9px;
+}
+
+.side_nav a span{
+    flex-grow:1;
+    padding-right:3vw
+}
+
+.side_nav a:hover{
+    background-color: var(--colourpalette-pink);
+}
+
+
+.side_nav .submenu.show{
+    display: block;
+}
+
+.side_nav.close {
+    width: 80px;
+    overflow: hidden;
+    
+}
+
+@media only screen and (max-width: 800px) {
+    .side_nav.close {
+        width: 0px;
+        overflow: hidden;
+    }
+
+    .container {
+        min-height: calc(100vh - var(--navbar-height) + 15px); /*  +15px is for the bottom margin in nav*/
+    }
+}
+
+.side_nav.close span {
+    opacity: 0;
+}
+
+.container {
+    min-height: calc(100vh - var(--navbar-height) + 15px); /*  +15px is for the bottom margin in nav*/
+    padding-left: var(--bs-gutter-x, .75rem);
+}
+
+
+
+header {
+
+}
+
+nav {
+    height:var(--navbar-height);
+    background-color: var(--colourpalette-nav_bg);
+    margin-bottom: 15px;
+    position:sticky;
+    
+}
+
+.navbar_container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding: 0 15px;
+}
+
+.menu_icon {
+    width: 20px;
+    height:20px;
+    margin-right: 30px;
+    margin-left:10px;
+}
+
+.logo_icon {
+    width: 69px;
+    height: 69px;
+}
+
+.account_buttons {
+    margin-left: auto;
+    margin-right: 30px;
+}
+
+
+
+
+
+
+/* https://copy-paste-css.com/ */
+.custom_button {
+    text-align: center;
+    display: inline-block;
+    outline: none;
+    cursor: pointer;
+    font-size: 14px;
+    line-height: 1;
+    border-radius: 500px;
+    transition-property: background-color, border-color, color, box-shadow, filter;
+    transition-duration: .3s;
+    border: 1px solid transparent;
+    letter-spacing: 2px;
+    min-width: 110px;
+    text-transform: uppercase;
+    white-space: normal;
+    font-weight: 500;
+    text-align: center;
+    color: #616467;
+    box-shadow: inset 0 0 0 2px #616467;
+    background-color: transparent;
+    height: 35px;
+}
+
+.custom_button:hover {
+    color: var(--colourpalette-white);
+    background-color: var(--colourpalette-pink);
+}
+
+footer {
+    color: var(--colourpalette-white);
+    height: 100px;
+    padding: 0px 15px;
+    background-color:var(--colourpalette-nav_bg)
+}
+
+.github_logo {
+    background-color: white;
+    height:100%;
+    width: 100%;
+    border-radius:50%;
+}
+
+.footer_container{
+    display:flex;
+    height:100%;
+    width: 100%;
+}
+
+.footer_container > div {
+    display: flex;
+    align-items: center;
+    color: var(--colourpalette-white);
+    flex-direction: column;
+    padding: 10px 10px;
+    width: 33%;
+    margin: auto;
+    line-height: 0px;
+}
+
+.footer_container > div p
+{
+    margin-top:10px;
+    margin-bottom:15px;
+}
+
+
+.github_link {
+    display: block;
+    height: 50px;
+    width: 50px;
+}
+
+.github_logo {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
